--- a/template/base.html.twig
+++ b/template/base.html.twig
@@ -29,6 +29,8 @@
             }
         }
     </style>
+    {% block stylesheet %}
+    {% endblock %}
     <!-- Custom styles for this template -->
     <link href="{{ asset('site/css/dashboard.css') }}" rel="stylesheet">
 </head>
@@ -48,83 +50,12 @@
 
 <div class="container-fluid">
     <div class="row">
-        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-            <div class="sidebar-sticky pt-3">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">
-                            <span data-feather="home"></span>
-                            Dashboard <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file"></span>
-                            Orders
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="shopping-cart"></span>
-                            Products
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="users"></span>
-                            Customers
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="bar-chart-2"></span>
-                            Reports
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="layers"></span>
-                            Integrations
-                        </a>
-                    </li>
-                </ul>
-
-                <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-                    <span>Saved reports</span>
-                    <a class="d-flex align-items-center text-muted" href="#" aria-label="Add a new report">
-                        <span data-feather="plus-circle"></span>
-                    </a>
-                </h6>
-                <ul class="nav flex-column mb-2">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file-text"></span>
-                            Current month
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file-text"></span>
-                            Last quarter
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file-text"></span>
-                            Social engagement
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span data-feather="file-text"></span>
-                            Year-end sale
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        {% block sidebar %}
+            {{ include('menu.html.twig') }}
+        {% endblock %}
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+            {% block main %}
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2">Dashboard</h1>
                 <div class="btn-toolbar mb-2 mb-md-0">
@@ -259,16 +190,19 @@
                         <td>himenaeos</td>
                         <td>Curabitur</td>
                     </tr>
+                    {% for i in 0..length %}
                     <tr>
                         <td>1,015</td>
-                        <td>sodales</td>
+                        <td>xyz{{ i+1 }}</td>
                         <td>ligula</td>
                         <td>in</td>
                         <td>libero</td>
                     </tr>
+                    {% endfor %}
                     </tbody>
                 </table>
             </div>
+            {% endblock main %}
         </main>
     </div>
 </div>
@@ -277,5 +211,8 @@
 <script src="{{ asset('site/assets/dist/js/bootstrap.bundle.js') }}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
-<script src="{{ asset('site/js/dashboard.js') }}"></script></body>
+<script src="{{ asset('site/js/feather.js') }}"></script>
+{% block javascripts %}
+{% endblock %}
+</body>
 </html>
