--- a/template/pages/integration/index.html.twig
+++ b/template/pages/integration/index.html.twig
@@ -1,4 +1,8 @@
 {% extends 'base.html.twig' %}
 {% block main %}
     <h1>{{ "Integrations Page" }}</h1>
+
+    <div class="alert">
+        {{ value }} ... {{ value2 }}
+    </div>
 {% endblock %}
