--- a/template/pages/dashboard/index.html.twig
+++ b/template/pages/dashboard/index.html.twig
@@ -1,5 +1,8 @@
 {% extends 'base.html.twig' %}
 {% block main %}
+    <div class="alert">
+        {{ value }}
+    </div>
 {% endblock %}
 {% block javascripts %}
     <script src="{{ asset('site/js/dashboard.js') }}"></script>
